--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6050,7 +6050,7 @@ progress {
  *
  * bootstrap-slider is released under the MIT License
  * Copyright (c) 2019 Kyle Kemp, Rohit Kalkur, and contributors
- * 
+ *
  * Permission is hereby granted, free of charge, to any person
  * obtaining a copy of this software and associated documentation
  * files (the "Software"), to deal in the Software without
@@ -6059,10 +6059,10 @@ progress {
  * copies of the Software, and to permit persons to whom the
  * Software is furnished to do so, subject to the following
  * conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be
  * included in all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
@@ -9758,7 +9758,7 @@ textarea.form-control-lg {
       background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e"); }
     .form-check-input:checked.form-check-input_fill {
       background-image: none;
-      background-color: #ffffff; }
+      background-color: transparent; }
       .form-check-input:checked.form-check-input_fill:after {
         background-color: #222222; }
   .form-check-input[type="checkbox"]:indeterminate {
@@ -9830,13 +9830,13 @@ textarea.form-control-lg {
       .form-range::-webkit-slider-thumb {
         transition: none; } }
     .form-range::-webkit-slider-thumb:active {
-      background-color: #bdbdbd; }
+      background-color: transparent; }
   .form-range::-webkit-slider-runnable-track {
     width: 100%;
     height: 0.5rem;
     color: transparent;
     cursor: pointer;
-    background-color: #dee2e6;
+    background-color:transparent;
     border-color: transparent;
     border-radius: 1rem;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075); }
@@ -9853,22 +9853,22 @@ textarea.form-control-lg {
       .form-range::-moz-range-thumb {
         transition: none; } }
     .form-range::-moz-range-thumb:active {
-      background-color: #bdbdbd; }
+      background-color: transparent; }
   .form-range::-moz-range-track {
     width: 100%;
     height: 0.5rem;
     color: transparent;
     cursor: pointer;
-    background-color: #dee2e6;
+    background-color: transparent;
     border-color: transparent;
     border-radius: 1rem;
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075); }
   .form-range:disabled {
     pointer-events: none; }
     .form-range:disabled::-webkit-slider-thumb {
-      background-color: #adb5bd; }
+      background-color: transparent; }
     .form-range:disabled::-moz-range-thumb {
-      background-color: #adb5bd; }
+      background-color: transparent; }
 
 .form-floating {
   position: relative; }
@@ -9885,12 +9885,12 @@ textarea.form-control-lg {
     border: 0.125rem solid transparent;
     transform-origin: 0 0;
     transition: opacity 0.1s ease-in-out, transform 0.1s ease-in-out;
-    color: #767676; }
+    color: transparent; }
     @media (prefers-reduced-motion: reduce) {
       .form-floating > label {
         transition: none; } }
   .form-floating > .form-control::placeholder {
-    color: transparent; }
+    color: black; }
   .form-floating > .form-control:-webkit-autofill {
     padding-top: 1.625rem;
     padding-bottom: 0.625rem; }
@@ -9900,11 +9900,11 @@ textarea.form-control-lg {
   .form-floating > .form-control:focus ~ label,
   .form-floating > .form-control:not(:placeholder-shown) ~ label,
   .form-floating > .form-select ~ label {
-    background-color: #ffffff;
+    background-color: transparent;
     color: #222222;
     transform: translateY(-1.9rem); }
   .form-floating > .form-control:-webkit-autofill ~ label {
-    background-color: #ffffff;
+    background-color: transparent;
     color: #222222;
     transform: translateY(-1.9rem); }
 
@@ -9916,7 +9916,7 @@ textarea.form-control-lg {
     left: 1rem;
     margin: 0;
     padding: 0.25rem 0.5rem 0.25rem 0.5rem;
-    background-color: #ffffff;
+    background-color: transparent;
     color: #222222;
     z-index: 1; }
 
@@ -14614,7 +14614,7 @@ button.js-add-wishlist.active .flaticon.flaticon-heart, a.add-to-wishlist.active
     padding-top: 3.125rem;
     flex-grow: 1; }
     .checkout-form .billing-info__wrapper .form-floating > label, .checkout-form .billing-info__wrapper .form-label-fixed > .form-label {
-      color: #767676; }
+      color: transparent; }
   .checkout-form .checkout__totals-wrapper .sticky-content {
     padding-top: 3.125rem; }
   .checkout-form .checkout__totals-wrapper .btn-checkout {
